--- a/Det842/.github/workflows/deploy-to-gh-pages.yml
+++ b/Det842/.github/workflows/deploy-to-gh-pages.yml
@@ -13,20 +13,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps: 
-    - uses: actions/checkout@v2
-    - name: Setup Node
-      uses: actions/setup-node@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Ensures full commit history
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
       with:
         node-version: '20'
 
-      -name: Install Dependencies
-        run: npm install
+    - name: Install Dependencies
+      run: npm install
 
-      -name: Build
-        run: npm run build
+    - name: Build
+      run: npm run build
 
-      -name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          publish_dir: ./dist
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
